--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/card-1.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">FloLearnsKorean</h5>
                         <p class="card-text">
-                            Webcómic en el que relataba mis experiencias aprendiendo el idioma Coreano.
+                            Webcómic de mis experiencia aprendiendo Coreano.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -122,7 +122,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/card-2.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">¿Qué debemos hacer?</h5>
                         <p class="card-text">
@@ -136,7 +136,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/card-3.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Floannart</h5>
                         <p class="card-text">
