cambio iconos y texto contacto

--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
+                <i class="fa-solid fa-pen-ruler"></i>
                 <h3 class="my-3 fw-bold">Diseñadora Gráfica</h3>
                 <p class="my-3">
                     Estudié en la Universidad de Chile desde el 2010 al 2016
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
+                <i class="fa-solid fa-brush"></i>
                 <h3 class="my-3 fw-bold">Ilustradora</h3>
                 <p class="my-3">
                     Estudiando por cuenta propia desde 2014
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
+                <i class="fa-solid fa-microphone"></i>
                 <h3 class="my-3 fw-bold">Cantante</h3>
                 <p class="my-3">
                     Próximamente
@@ -158,11 +158,7 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">¿Te gusta mi trabajo? Hablemos para ver en qué te puedo ayudar</p>
 
         <form>
 
