--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fa-solid fa-pen-ruler"></i>
+                <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Diseñadora Gráfica</h3>
                 <p class="my-3">
                     Estudié en la Universidad de Chile desde el 2010 al 2016
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fa-solid fa-brush"></i>
+                <i class="far fa-map fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Ilustradora</h3>
                 <p class="my-3">
                     Estudiando por cuenta propia desde 2014
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fa-solid fa-microphone"></i>
+                <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Cantante</h3>
                 <p class="my-3">
                     Próximamente
