--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Diseño <br> e iilustración
+                    Diseño <br> e ilustración
                 </h1>
                 <p class="my-5">
-                    ¡Conoce mi trabajo! Me gusta aprender de todo y poder utilizarlo en mis distintos proyectos.
+                    ¡Conoce mi trabajo! Me gusta aprender de todo <br>y poder utilizarlo en mis distintos proyectos.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
